# CMake-training

./: .gitignore  CMakeLists.txt  NewProConfig.h.in  configure.bat  main.cxx  readme.md  run.bat  run.sh
Adder/: CMakeLists.txt  adder.cpp
